--- a/tpmlwebref_chatmessage_6.htm
+++ b/tpmlwebref_chatmessage_6.htm
@@ -63,15 +63,15 @@
                                     <div class="flex-form">
                                         <div class="form_grp">
                                             <div class="labelEffect">
-                                                <input name="userName" id="userName" type="text" value="其他類型">
-                                                <label for="userName">主分類<abbr></abbr></label>
+                                                <input name="userName" id="userName" type="text" value="無">
+                                                <label for="userName">主要分類<abbr></abbr></label>
                                                 </select>
                                             </div>
                                         </div>
                                         <div class="form_grp">
                                             <div class="labelEffect">
-                                                <input name="userName" id="userName" type="text" value="輸入其他類型">
-                                                <label for="userName">次分類<abbr></abbr></label>
+                                                <input name="userName" id="userName" type="text" value="無">
+                                                <label for="userName">次要分類<abbr></abbr></label>
                                             </div>
                                             <!-- <div class="help">說明文字</div> -->
                                         </div>
@@ -87,7 +87,7 @@
                                     <div class="flex-form">
                                         <div class="form_grp">
                                             <div class="labelEffect">
-                                                <input name="userName" id="userName" type="text" value="提示回覆">
+                                                <input name="userName" id="userName" type="text" value="無法處理">
                                                 <label for="userName">回覆狀態<abbr></abbr></label>
                                                 </select>
                                                 <label> <abbr></abbr></label>
