--- a/tpmlwebref_chatmessage_9.htm
+++ b/tpmlwebref_chatmessage_9.htm
@@ -64,20 +64,20 @@
                                         <div class="form_grp">
                                             <div class="labelEffect">
                                                 <input name="userName" id="userName" type="text" value="無">
-                                                <label for="userName">主問題主題<abbr></abbr></label>
+                                                <label for="userName">主要分類<abbr></abbr></label>
                                                 </select>
                                             </div>
                                         </div>
                                         <div class="form_grp">
                                             <div class="labelEffect">
                                                 <input name="userName" id="userName" type="text" value="無">
-                                                <label for="userName">次問題主題<abbr></abbr></label>
+                                                <label for="userName">次要分類<abbr></abbr></label>
                                             </div>
                                             <!-- <div class="help">說明文字</div> -->
                                         </div>
                                         <div class="form_grp">
                                             <div class="labelEffect">
-                                                <textarea>我要捐書, 圖書館收那些主題 ?</textarea>
+                                                <textarea>什麼是熱門館藏？借閱冊數和期限與一般館藏是否有不同？</textarea>
                                                 <label for="userId">留言內容<abbr></abbr></label>
                                             </div>
                                             <!-- <div class="help">說明文字</div> -->
@@ -95,7 +95,7 @@
                                         </div>
                                         <div class="form_grp">
                                             <div class="labelEffect">
-                                                <input name="userName" id="userName" type="text" value="常見問題回覆">
+                                                <input name="userName" id="userName" type="text" value="一般輸入資訊">
                                                 <label for="userName">回覆方式<abbr></abbr></label>
                                                 </select>
                                                 <label> <abbr></abbr></label>
