--- a/tpmlwebref_questionsearchnew.htm
+++ b/tpmlwebref_questionsearchnew.htm
@@ -80,11 +80,9 @@
                                                 <div class="flex-form">
                                                     <!--h4>基本資訊</h4-->
                                                     <div class="form_grp form_inline">
-
                                                         <div class="labelEffect">
-                                                            <input name="" type="text" value="請輸入案件編號"
-                                                                class="dynamicCol used">
-                                                            <label>案件編號</label>
+                                                            <input name="" type="text" value="999" disabled>
+                                                            <label>序號</label>
                                                         </div>
                                                         <div class="labelEffect">
                                                             <input name="" type="text" value="2024/5/13下午18:09"
@@ -133,15 +131,16 @@
 臺北市立圖書館 諮詢服務課 敬復 </textarea>
                                                             <label for="userId">答案<abbr></abbr></label>
                                                         </div>
-                                                        <div class="help">輸入回覆的內容將顯示於前台留言板(字數200/500)</div>
+                                                        <div class="help">輸入回覆的內容將顯示於前台(字數200/500)</div>
                                                     </div>
                                                     <div class="form_grp">
                                                         <div class="labelEffect">
                                                             <textarea>維基百科：https://en.wikipedia.org/wiki/Printer%27s_key (這裏請工程師做可以直接點擊網址（新開視窗）)</textarea>
                                                             <label for="userId">資料來源<abbr></abbr></label>
                                                         </div>
-                                                        <div class="help">輸入資料來源內容將顯示於前台留言板(字數200/500)</div>
+                                                        <div class="help">輸入資料來源內容將顯示於前台(字數200/500)</div>
                                                     </div>
+                                                    <hr>
                                                     <div class="form_grp form_inline">
                                                         <div class="labelEffect">
                                                             <select id="" name="" class="dynamicCol used">
@@ -215,7 +214,7 @@
                                                                 <option value="3">電話</option>
                                                                 <option value="3">全部</option>
                                                             </select>
-                                                            <label>回覆方式(改成check box 複選)</label>
+                                                            <label>回覆方式(改成check box)</label>
                                                         </div>
                                                     </div>
                                                     <div class="form_grp form_inline">
@@ -274,7 +273,7 @@
                                                                 <OPTION value=5>網路資源</OPTION>
                                                                 <OPTION value=5>其他</OPTION>
                                                             </select>
-                                                            <label>回復資料類型</label>
+                                                            <label>回覆資料類型</label>
                                                         </div>
                                                         <div class="labelEffect">
                                                             <input name="" type="text" value="選擇其他請輸入文字"
@@ -473,7 +472,7 @@
                                     </div>
                                     <div class="flex-form">
                                         <div class="form_grp">
-                                            <div class="form_title">狀態<abbr>*已回覆</abbr></div>
+                                            <div class="form_title">狀態*已回覆</div>
                                             <div>回覆時間 2024/5/14下午18:09</div>
                                             <div class="form_content">
                                             </div>
