--- a/tpmlwebref_referralsedit.htm
+++ b/tpmlwebref_referralsedit.htm
@@ -80,13 +80,10 @@
                                                 <div class="flex-form">
                                                     <!--h4>基本資訊</h4-->
                                                     <div class="form_grp form_inline">
-
                                                         <div class="labelEffect">
-                                                            <input name="" type="text" value="請輸入案件編號"
-                                                                class="dynamicCol used">
-                                                            <label>案件編號</label>
+                                                            <input name="" type="text" value="999" disabled>
+                                                            <label>序號</label>
                                                         </div>
-
                                                         <div class="labelEffect">
                                                             <input name="" type="text" value="2024/5/13下午18:09"
                                                                 disabled>
@@ -275,7 +272,7 @@
                                                                 <OPTION value=5>網路資源</OPTION>
                                                                 <OPTION value=5>其他</OPTION>
                                                             </select>
-                                                            <label>回復資料類型</label>
+                                                            <label>回覆資料類型</label>
                                                         </div>
                                                         <div class="labelEffect">
                                                             <input name="" type="text" value="選擇其他請輸入文字"
@@ -463,7 +460,7 @@
                                     </div>
                                     <div class="flex-form">
                                         <div class="form_grp">
-                                            <div class="form_title">狀態<abbr>*已回覆</abbr></div>
+                                            <div class="form_title">狀態*已回覆</div>
                                             <div>回覆時間 2024/5/14下午18:09</div>
                                             <div class="form_content">
                                             </div>
