--- a/tpmlwebref_statistics.htm
+++ b/tpmlwebref_statistics.htm
@@ -85,12 +85,12 @@
                                                         <option value="1">每年件數</option>
                                                         <option value="2">每月件數</option>
                                                         <option value="3">每天件數</option>
-                                                        <option value="4">回復天數</option>
+                                                        <option value="4">回覆天數</option>
                                                         <option value="5">處理結果</option>
-                                                        <option value="6">回復館別</option>
+                                                        <option value="6">回覆館別</option>
                                                         <option value="7">參考服務問題形式</option>
                                                         <option value="8">問題主題類別</option>
-                                                        <option value="9">問題回復方式</option>
+                                                        <option value="9">問題回覆方式</option>
                                                         <option value="10">讀者類型</option>
                                                         <option value="11">回覆資料類型</option>
                                                     </select>
@@ -661,11 +661,11 @@
                                 </div>
                                 <div class="table_wrapper">
                                     <table class="table_hover">
-                                        <caption>問題回復方式格式</caption>
+                                        <caption>問題回覆方式格式</caption>
                                         <thead>
                                             <tr>
                                                 <th><a href="#">序號<i class="i_sort"></i></a></th>
-                                                <th class="text-left">問題回復方式</th>
+                                                <th class="text-left">問題回覆方式</th>
                                                 <!--th>預約案號</th>
                                                     <th>虛擬主機(編號)</th-->
                                                 <th class="text-left">次數</th>
