--- a/tpmlwebref_chatmessage_1.htm
+++ b/tpmlwebref_chatmessage_1.htm
@@ -64,21 +64,21 @@
                                         <div class="form_grp">
                                             <div class="labelEffect">
                                                 <input name="userName" id="userName" type="text" value="館藏查詢">
-                                                <label for="userName">主問題主題<abbr></abbr></label>
+                                                <label for="userName">主要分類<abbr></abbr></label>
                                                 </select>
                                             </div>
                                         </div>
                                         <div class="form_grp">
                                             <div class="labelEffect">
                                                 <input name="userName" id="userName" type="text" value="館藏查詢系統及圖書預約問題">
-                                                <label for="userName">次問題主題<abbr></abbr></label>
+                                                <label for="userName">次要分類<abbr></abbr></label>
                                             </div>
                                             <!-- <div class="help">說明文字</div> -->
                                         </div>
                                         <div class="form_grp">
                                             <div class="labelEffect">
                                                 <textarea>為何有收到「預約逾期未取取消通知」，卻沒有收到「預約書到館通知」？</textarea>
-                                                <label for="userId">留言內容<abbr></abbr></label>
+                                                <label for="userId">常見問題<abbr></abbr></label>
                                             </div>
                                             <!-- <div class="help">說明文字</div> -->
                                         </div>
@@ -95,7 +95,7 @@
                                         </div>
                                         <div class="form_grp">
                                             <div class="labelEffect">
-                                                <input name="userName" id="userName" type="text" value="智能類別回覆">
+                                                <input name="userName" id="userName" type="text" value="常見類別">
                                                 <label for="userName">回覆方式<abbr></abbr></label>
                                                 </select>
                                                 <label> <abbr></abbr></label>
